# text-adventure

./: .gitignore  Cargo.toml  Makefile.toml  README.md
data/: dos-chars.txt  help.txt  intro.txt  items.yml  save-state.yml
data/levels/: stone-end-market.yml
src/: level.rs  main.rs  print.rs  utils.rs
