[package]
name = "text-adventure"
version = "0.1.0"
authors = ["Greg Tatum <tatum.creative@gmail.com>"]
edition = "2018"
license = "GPLv3"

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_yaml = "0.8"
rprompt = "1.0"

[dev-dependencies]
insta = { version = "1.5", features = ["ron"] }
